# libmygis

./: .cproject  .project  ChangeLog  ChangeSet  Makefile.am  ProjectHome.md  README.md  acinclude.m4  autotools.sh  compare.c  compare.h  configure.in  fixed.c  fixed.h  fixed_priv.h  geometry.c  geometry.h  mygis.c  mygis.h  mygis_priv.h  pairlist.c  pairlist.h  pairlist_priv.h  portability.c  portability.h  projection.c  projection.h  record.c  record.h  shapefile.c  shapefile.h
branches/0.7/: Makefile.am  geometry.h  projection.c  projection.h
branches/0.7/dbf/: Makefile.am  readme.txt
branches/0.7/e00/: Makefile.am
branches/0.7/prj/: prj.c  prj_defs.c  prj_lex.l
branches/0.7/tests/: Makefile.am
branches/0.7/tools/: Makefile.am
branches/0.7/wkb/: wkb.h
branches/0.7/wkt/: Makefile.am
branches/jcole-test-20100222/: ChangeLog  configure.in  fixed.h  fixed_priv.h  geometry.c  geometry.h  mygis_priv.h  pairlist.c  pairlist.h  pairlist_priv.h  projection.c  record.c  record_priv.h  shapefile.c
branches/jcole-test-20100222/dbf/: dbf_read.c  dbf_scan.c
branches/jcole-test-20100222/doc/: libmygis.texi  variables.texi.in
branches/jcole-test-20100222/e00/: e00.c
branches/jcole-test-20100222/extra/: Makefile.am
branches/jcole-test-20100222/shp/: sh_header.c  shp.h  shx.c  shx.h  shx_read.c
branches/jcole-test-20100222/tests/: Makefile.am  test_dbf.c  test_fixed.c  test_shapefile.c  test_shx.c  test_swap.c  test_tiger.c  test_wkb.c
branches/jcole-test-20100222/tiger/: tiger.h  tiger_defs.c  tiger_defs.h
branches/jcole-test-20100222/wkb/: wkb_misc.c  wkb_write.c
branches/jcole-test-20100222/wkt/: wkt_priv.h  wkt_write.c
dbf/: Makefile.am  dbf.c  dbf.h  dbf_misc.c  dbf_priv.h  dbf_read.c  dbf_scan.c
doc/: Makefile.am  libmygis.texi
e00/: Makefile.am  e00.c  e00.h  e00_priv.h  e00_read.c  e00_write.c
extra/: Makefile.am  libmygis.spec.in  libmygis.spec.sh
prj/: Makefile.am  prj.c  prj.h  prj_defs.c  prj_defs.h  prj_yacc.y
releases/0.7.5/: ChangeLog  Makefile.am  projection.h  shapefile.c  shapefile.h
releases/0.7.5/dbf/: dbf.c
releases/0.7.5/prj/: Makefile.am  prj.c
releases/0.7.5/shp/: shp.c  shp.h  shx.c
releases/0.7.5/tests/: Makefile.am  test_prj.c  test_shapefile_projection.c
releases/0.7.5/tiger/: Makefile.am
releases/0.7.5/wkb/: wkb_misc.c  wkb_priv.h
releases/0.7.5/wkt/: wkt_write.c
shp/: Makefile.am  sh_header.c  sh_header.h  sh_header_priv.h  shp.c  shp.h  shp_priv.h  shp_read.c  shp_write.c  shx.c  shx.h  shx_priv.h  shx_read.c  shx_write.c
tags/0.8.0/: .cdtconfigure.Build (GNU)  AUTHORS  acinclude.m4  compare.c  compare.h  geometry.c  geometry_priv.h  mygis.c  mygis.h  portability.c  portability.h  projection.h  projection_priv.h  record.c  record.h  shapefile.c  shapefile.h  shapefile_priv.h
tags/0.8.0/dbf/: Makefile.am  dbf.h  dbf_priv.h  dbf_read.c
tags/0.8.0/doc/: Makefile.am
tags/0.8.0/doc/static/: libmygis.html
tags/0.8.0/e00/: e00.h  e00_priv.h  e00_write.c
tags/0.8.0/prj/: Makefile.am  prj.h  prj_defs.h  prj_priv.h
tags/0.8.0/shp/: sh_header.c  sh_header.h  sh_header_priv.h  shp_priv.h  shp_write.c  shx_priv.h  shx_read.c  shx_write.c
tags/0.8.0/tests/: test_dbf_scan.c  test_e00.c  test_prj.c  test_shapefile_projection.c  test_shapefile_scan.c  test_shx.c  test_tiger.c
tags/0.8.0/tiger/: tiger_priv.h  tiger_read.c
tags/0.8.0/wkb/: wkb.h  wkb_misc.c  wkb_priv.h  wkb_read.c
tags/0.8.0/wkt/: Makefile.am  wkt.c  wkt.h  wkt_write.c
tests/: Makefile.am  test_dbf.c  test_dbf_scan.c  test_e00.c  test_fixed.c  test_fixed_usps.c  test_pairlist.c  test_prj.c  test_projection.c  test_shapefile.c  test_shapefile_projection.c  test_shapefile_scan.c  test_shp.c  test_shx.c  test_swap.c  test_tiger.c  test_wkb.c
tests/data/SCCS/: p.country.shp  s.cities.shp  s.country.shp  s.test.fixed
tiger/: Makefile.am  tiger.c  tiger.h  tiger_defs.c  tiger_defs.h  tiger_priv.h  tiger_read.c
tools/: Makefile.am  README-mysqlgisimport  mysqlgisimport.c
trunk/: .project  ChangeLog  INSTALL  Makefile.am  acinclude.m4  configure.in  fixed.c  fixed.h  fixed_priv.h  geometry.c  geometry.h  geometry_priv.h  mygis.c  mygis.h  mygis_priv.h  pairlist.c  projection.c  projection.h  projection_priv.h  record.h  record_priv.h  shapefile.c  shapefile.h  shapefile_priv.h
trunk/dbf/: Makefile.am  dbf.c  dbf.h  dbf_misc.c  dbf_priv.h  dbf_scan.c
trunk/doc/: Makefile.am  libmygis.texi
trunk/e00/: Makefile.am  e00.c  e00_priv.h  e00_read.c  readme.txt
trunk/extra/: Makefile.am  libmygis.spec.in
trunk/prj/: Makefile.am  prj.c  prj.h  prj_defs.c  prj_priv.h  prj_yacc.y  prj_yacc_stub.h
trunk/shp/: Makefile.am  sh_header.h  sh_header_priv.h  shp.c  shp.h  shp_priv.h  shp_read.c  shp_write.c  shx.c  shx.h  shx_priv.h  shx_write.c
trunk/tests/: Makefile.am  test_dbf.c  test_dbf_scan.c  test_e00.c  test_fixed.c  test_fixed_usps.c  test_pairlist.c  test_projection.c  test_shapefile.c  test_shapefile_projection.c  test_shapefile_scan.c  test_shx.c  test_tiger.c  test_wkb.c
trunk/tiger/: Makefile.am  tiger.c  tiger.h
trunk/tools/: Makefile.am  mysqlgisimport.c
trunk/wkb/: Makefile.am  wkb_misc.c  wkb_read.c  wkb_write.c
trunk/wkt/: Makefile.am  wkt.h  wkt_priv.h  wkt_write.c
wkb/: Makefile.am  wkb.c  wkb.h  wkb_misc.c  wkb_priv.h  wkb_read.c  wkb_write.c
wkt/: wkt.c  wkt.h  wkt_priv.h  wkt_write.c
